# Finales-Taller

./: .gitignore  Comentarios.md  Conceptos y definiciones.odt  EjDuplicar.c  EjFinal130819Arch.c  EjFinal5Arch.c  EjFinal5SocketsDIego.c  PruebaSobreStatic.c  README.md  a  aux.txt  ejArchivos13082019.c  ejFinal2Arch.c  ejFinal2Replicar.c  ejFinal2Sockt.c  ejFinal3Archi.c  ejFinal3Sockets.c  ejFinal3SocketsDiego.c  ejFinal4Archivos.c  ejFinal4Hexadecimal.c  ejFinal5Sockets.c  ejFinal6Archivos.c  ejercicio1Final19_2_19.c  ejercicio1Final26_2_19.c  endian.c  out  prueba.txt  pruebaConst.c  pruebaFinal220192.c  pruebaMacros.c
Boton en qt/: BotonQt.cpp  BotonQt.h
Codigo/: CMakeLists.txt  ContadorDeInstancias.cpp  ContadorDeInstancias.h  Interseccion.cpp  SumadorProtegido.cpp  SumadorProtegido.h  main.cpp
Codigo2/: CMakeLists.txt  Contador.cpp  Contador.h  DuplicarSiPertenece.cpp  main.cpp
DibujarSDL/: CMakeLists.txt  main.cpp
